# rr-ui

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_QUICKSTART.md  Dioxus.toml  Dioxus.toml.bak  Dockerfile  LICENSE  OPENWRT_BUILD.md  README.md  ROADMAP.md  SECURITY.md  build.rs  config.json  deploy_manual.sh  dev_install.sh  distribution.sh  docker-compose.yml  install.sh  local_test.sh  rr-ui.service  rr-ui.sh  run_tests.sh  subscription_group_model.rs  test_core_switching.sh  test_deploy_integrity.sh  verify_phase_2.sh
benches/: allocation_bench.rs  apl_benchmark.rs  binary_footprint.rs  forensics_bench.rs  grpc_benchmark.rs  orchestrator_latency.rs  routing_engine_latency.rs  serialization_bench.rs  system_benchmark.rs  ui_render_bench.rs  ui_state_sync.rs  ws_throughput.rs
examples/: inbound_settings_usage.rs
proto/: common.proto  common_protocol.proto  common_serial.proto  proxyman.proto  rustray.proto  stats.proto
src/: cli.rs  db.rs  lib.rs  main.rs  models.rs  models_tests.rs  rustray_client.rs  rustray_config.rs  rustray_process.rs  tun_device.rs
src/adapters/: atomic_config.rs  geo.rs  mod.rs  nftables_manager.rs  orchestrators.rs  repositories.rs  rustray_core.rs  singbox_core.rs  system_openwrt.rs  uds_manager.rs  validators.rs
src/api/: auth.rs  backup.rs  balancer.rs  cert.rs  client.rs  geo.rs  inbound.rs  log.rs  mod.rs  routing.rs  rustray_control.rs  server.rs  setting.rs  signaling.rs  sub.rs  system.rs  telemetry.rs  tgbot.rs  tun.rs  warp.rs
src/cli/: advanced.rs  tui.rs
src/domain/: bulk_operations.rs  errors.rs  graph_schema.rs  mod.rs  models.rs  models_tests.rs  plugin_api.rs  ports.rs  proxy_core.rs  services.rs
src/http_handlers/: inbound.rs  mod.rs  static_files.rs  user.rs
src/jobs/: billing.rs  lifecycle.rs  mod.rs  traffic.rs  traffic_reset.rs  watchdog.rs
src/middleware/: audit.rs  auth.rs  decoy.rs  mod.rs  ratelimit.rs  ws_telemetry.rs
src/repositories/: balancer.rs  inbound.rs  mod.rs  routing.rs  setting.rs  user.rs
src/services/: active_probing.rs  audit.rs  auth.rs  auto_failover.rs  bulk_worker.rs  cost_optimizer.rs  delta_sync.rs  geo_orchestrator.rs  iptables.rs  live_quota.rs  log_watcher.rs  mesh.rs  mesh_orchestrator.rs  mod.rs  native_alerts.rs  orchestrator.rs  predictive_scaling.rs  reconciler.rs  reseller_billing.rs  route_optimizer.rs  shield.rs  sidecar_manager.rs  sniffer.rs  subscription.rs  telemetry.rs  tgbot.rs  tls_fingerprint.rs  traffic_obfuscation.rs  wasm_loader.rs
src/transport/: db_mimic.rs  mod.rs
src/ui/: app.rs  mod.rs  server_fns.rs  sleep.rs  state.rs  theme.rs
src/ui/assets/: layout.css
src/ui/components/: add_client_modal.rs  badge.rs  bulk_operations_modal.rs  button.rs  byte_counter.rs  card.rs  client_details_modal.rs  client_lifecycle.rs  client_table.rs  command_palette.rs  connection_matrix.rs  cpu_gauge.rs  forensics_tracer.rs  fragmentation_viz.rs  glass_card.rs  icons.rs  inbound_modal.rs  input.rs  interactive_sparkline.rs  log_viewer.rs  memory_progress.rs  mod.rs  modal.rs  plugin_slot.rs  power_core.rs  qr_code_modal.rs  routing_logic_canvas.rs  scanline_overlay.rs  secret_generator.rs  sidebar.rs  sparkline.rs  statistic_card.rs  status_indicator.rs  subscription_generator.rs  telemetry_panel.rs  theme_provider.rs  theme_switcher.rs  theme_toggle.rs  toast.rs  traffic_matrix.rs  (+2 more)
src/ui/components/forms/: choice_box.rs  date_picker.rs  db_mimic_form.rs  flow_j_form.rs  mod.rs  multi_text_input.rs  number_input.rs  reality_form.rs  slipstream_form.rs  switch.rs  text_area.rs  text_input.rs  vless_form.rs
src/ui/pages/: backups.rs  cf_scanner.rs  connections.rs  dashboard.rs  diagnostics.rs  dns_manager.rs  forensics.rs  forms_demo.rs  inbounds.rs  login.rs  logs.rs  mesh.rs  migration.rs  mod.rs  rustray.rs  settings.rs
tests/: cli_command_test.rs  core_parity_tests.rs  dashboard_stats_test.rs  integration_ui.rs  qr_test.rs  rustray_resilience_test.rs  secret_test.rs  serialization_parity_test.rs  transport_test.rs
