# rr-ui/Cargo.toml
[package]
name = "rr-ui"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "A dual-mode (Server/Client) configuration and telemetry panel for RustRay censorship circumvention core."
repository = "https://github.com/j-rad/rr-ui"
keywords = ["rustray", "censorship-circumvention", "dioxus", "actix-web", "telemetry"]
categories = ["network-programming", "gui"]

[dependencies]
# Core dependencies (shared)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["wasmbind"] }
rand = "0.8.5"
futures = "0.3.31"
sha2 = "0.10"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
fast_qr = "0.13.1"
chacha20poly1305 = "0.10"
hex = "0.4"
dioxus = { version = "0.7.2", default-features = false, features = ["router", "web", "hooks", "signals", "macro", "html", "launch"] }
server_fn = { version = "0.8", optional = true, default-features = false }
server_fn_macro_default = { version = "0.8", optional = true }
web-sys = { version = "0.3", features = ["Window", "Location", "MouseEvent", "Event", "console", "HtmlInputElement", "HtmlButtonElement", "Navigator", "Clipboard"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
rust-embed = { version = "8.0", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
urlencoding = "2.1.3"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server-only dependencies
tempfile = { version = "3.8", optional = true }
nftables = { version = "0.6.3", optional = true }
ipnet = { version = "2.9", optional = true }
actix-web = { version = "4.9", features = ["rustls-0_23"], optional = true }
actix-cors = { version = "0.7", optional = true }
actix-web-actors = { version = "4.3", optional = true }
actix-files = { version = "0.6", optional = true }
tokio = { version = "1.32", features = ["full"], optional = true }
futures-util = "0.3"
instant-acme = { version = "0.8.4", optional = true }
rcgen = { version = "0.14.7", optional = true }
surrealdb = { version = "2.0.5", features = ["kv-surrealkv"], optional = true }
tonic = { version = "0.14", default-features = true, features = ["transport"], optional = true }
prost = { version = "0.14", optional = true }
tonic-prost = { version = "0.14.5", optional = true }
mime_guess = { version = "2.0", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
env_logger = { version = "0.11.9", optional = true }
dotenv = { version = "0.15", optional = true }
sysinfo = { version = "0.29", optional = true }
reqwest = { version = "0.13.2", features = ["json", "stream"], optional = true }
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "10.3.0", optional = true }
regex = { version = "1.10", optional = true }
totp-rs = { version = "5.5", features = ["qr", "otpauth"], optional = true }
actix = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
cron = { version = "0.15.0", optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
tun-rs = { version = "2", features = ["async"], optional = true }
mimalloc = { version = "0.1", optional = true }
rumqttc = { version = "0.25.1", optional = true }
url = { version = "2", optional = true }
async-trait = { version = "0.1", optional = true }
syslog = { version = "7.0.0", optional = true }
libc = { version = "0.2", optional = true }
mio = { version = "1.0", optional = true }
memmap2 = { version = "0.9", optional = true }
bincode = { version = "1.3.3", optional = true }
colored = { version = "3.1.1", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
rustls-pemfile = { version = "2.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
secrecy = { version = "0.10.3", features = ["serde"], optional = true }
caps = { version = "0.5.6", optional = true }
nix = { version = "0.31.1", features = ["fs"], optional = true }
base32 = { version = "0.5.1", optional = true }
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
which = { version = "8.0.0", optional = true }
indicatif = { version = "0.18.4", optional = true }
validator = { version = "0.20.0", features = ["derive"], optional = true }
wasmer = { version = "4.3.1", optional = true }



[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
opt-level = "z"

[features]
default = []
server = [
    "dep:tokio",
    "dep:actix-web",
    "dep:actix-cors",
    "dep:actix-web-actors",
    "dep:actix-files",
    "dep:surrealdb",
    "dep:instant-acme",
    "dep:rcgen",
    "dep:validator",
    "dep:tonic",
    "dep:prost",
    "dep:tonic-prost",
    "dep:clap",
    "dep:env_logger",
    "dep:dotenv",
    "dep:sysinfo",
    "dep:reqwest",
    "dep:argon2",
    "dep:jsonwebtoken",
    "dep:regex",
    "dep:totp-rs",
    "dep:actix",
    "dep:tokio-stream",
    "dep:cron",
    "dep:rusqlite",
    "dep:tun-rs",
    "dep:mimalloc",
    "dep:rumqttc",
    "dep:url",
    "dep:async-trait",
    "dep:syslog",
    "dep:libc",
    "dep:mio",
    "dep:memmap2",
    "dep:bincode",
    "dep:colored",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:dashmap",
    "dep:secrecy",
    "dep:caps",
    "dep:nix",
    "dep:nftables",
    "dep:ipnet",
    "dep:base32",
    "dep:ratatui",
    "dep:crossterm",
    "dep:which",
    "dep:indicatif",
    "dep:mime_guess",
    "dep:rust-embed",
    "dep:server_fn_macro_default",
    "dep:server_fn",
    "server_fn/ssr",
    "server_fn/reqwest",
    "server_fn/cbor",
    "server_fn/browser",
    "server_fn/actix",
    "dep:tempfile",
    "dep:nftables",
    "dep:ipnet",
    "dep:wasmer",
]
web = ["dioxus/web", "dep:web-sys", "dep:wasm-bindgen", "dep:gloo-timers", "dep:rust-embed", "dep:server_fn", "server_fn/browser", "dep:server_fn_macro_default", "dep:wasm-bindgen-futures"]

[build-dependencies]
tonic-build = { version = "0.14", default-features = true }
tonic-prost-build = "0.14.5"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
futures-util = "0.3"
regex = "1.10"
url = "2.5"
secrecy = { version = "0.10.3", features = ["serde"] }
tokio = { version = "1.32", features = ["full"] }
actix-web = { version = "4.9", features = ["rustls-0_23"] }
tonic = "0.14"

[[bench]]
name = "system_benchmark"
harness = false
required-features = ["server"]

[[bench]]
name = "grpc_benchmark"
harness = false
required-features = ["server"]

[[bench]]
name = "serialization_bench"
harness = false
required-features = ["server"]

[[bench]]
name = "ws_throughput"
harness = false
required-features = ["server"]

[[bench]]
name = "allocation_bench"
harness = false
required-features = ["server"]

[[bench]]
name = "orchestrator_latency"
harness = false
required-features = ["server"]

[[bench]]
name = "routing_engine_latency"
harness = false
required-features = ["server"]

[[bench]]
name = "binary_footprint"
harness = false
required-features = ["server"]

[[bench]]
name = "ui_state_sync"
harness = false
required-features = ["server"]

[[bench]]
name = "apl_benchmark"
harness = false
required-features = ["server"]


[[bin]]
name = "rr-ui-cli"
path = "src/bin/cli.rs"
required-features = ["server"]

[[bin]]
name = "rr-ui-migrate"
path = "src/bin/migrate.rs"
required-features = ["server"]


[[bench]]
name = "ui_render_bench"
harness = false
required-features = ["server"]

[[bench]]
name = "forensics_bench"
harness = false

[lints]
workspace = true

